# FSS_Ising

./: CMakeLists.txt  Ising.hpp  Ising.pyi  bind.cpp  fss.py  pklwrite.py  plot_Tc.py  plot_exponents.py  plot_fss.py  plot_nu.py
